--- a/codefiles/css/main.css
+++ b/codefiles/css/main.css
@@ -92,6 +92,7 @@ a.btn{
 }
 header{
   position: fixed;
+  
   left: 0;
   top: 0;
   width: 100%;
@@ -138,7 +139,7 @@ header{
 }
 .shopitem .image-holder{
   width: 100%;
-  height: 100%;
+  height: 3cm;
   padding: 0;
   border-radius: 2mm;
 }
