--- a/codefiles/css/main.css
+++ b/codefiles/css/main.css
@@ -174,6 +174,10 @@ header{
   border-bottom: 0.5mm solid var(--theme);
   color: var(--theme);
 }
+.shopitem.compact>*{
+  display: inline-block;
+  padding: 0 2mm;
+}
 .shopitem.compact{
   grid-template-columns: 0 1fr auto;
   grid-template-rows:  0 auto auto;
