--- a/codefiles/css/main.css
+++ b/codefiles/css/main.css
@@ -174,19 +174,21 @@ header{
   border-bottom: 0.5mm solid var(--theme);
   color: var(--theme);
 }
+
 .shopitem.compact{
   grid-template-columns: 1fr auto;
   grid-template-rows:  auto auto;
   grid-gap: 0 2mm;
   padding: 0 2mm;
   height: auto;
+  justify-items: left;
 }
 .shopitem.compact .name{
   color: var(--theme);
   grid-area: 2 / 2 / 3 / 3;
 }
-.shopitem.compact .image-holder{
-  display: none!important;
+.compact img{
+  display: none;
 }  
 .shopitem.compact .price{
   grid-area: 2 / 3 / 3 / 4;
