--- a/codefiles/css/main.css
+++ b/codefiles/css/main.css
@@ -180,8 +180,8 @@ header{
   grid-template-rows:  auto auto;
   grid-gap: 0 2mm;
   padding: 0 2mm;
-  height: auto;
   justify-items: left;
+  background: red;
 }
 .shopitem.compact .name{
   color: var(--theme);
