--- a/codefiles/css/main.css
+++ b/codefiles/css/main.css
@@ -174,6 +174,13 @@ header{
   border-bottom: 0.5mm solid var(--theme);
   color: var(--theme);
 }
+.shopitem .total{
+  grid-area: 3 / 3 / 4 / 4;
+}
+.shopitem .qctrl{
+  grid-area: 3 / 2 / 4 / 3;
+}
+
 
 .shopitem.compact{
   grid-template-columns: auto 1fr;
