--- a/codefiles/css/main.css
+++ b/codefiles/css/main.css
@@ -183,12 +183,11 @@ header{
 
 
 .shopitem.compact{
-  grid-template-columns: auto 1fr;
+  grid-template-columns: 1fr auto;
   grid-template-rows:  auto auto;
   grid-gap: 0 2mm;
   padding: 0 2mm;
   justify-items: left;
-  background: red;
 }
 .shopitem.compact .name{
   color: var(--theme);
