--- a/codefiles/css/main.css
+++ b/codefiles/css/main.css
@@ -127,7 +127,7 @@ header{
   background: var(--bg2);
   margin: 5mm 0mm;
   box-shadow: 0 0.25mm 2mm rgba(0,0,0,0.3);
-  grid-template-columns: 30vw 1fr auto;
+  grid-template-columns: auto 1fr auto;
   grid-template-rows: auto auto auto auto;
   text-align: left;
   justify-items: start;
@@ -139,8 +139,9 @@ header{
   padding: 0 2mm;
 }
 .shopitem .image-holder{
-  width: 100%;
-  height: 30vw;
+  width: 30vw;
+  max-width: 3.5cm;
+  height: auto;
   padding: 0;
   border-radius: 2mm;
   align-self: center;
